force-app/main/default/objects/Education_Details__c/Education_Details__c.object-meta.xml
<CustomObject>
    <label>Education Details</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Education_Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Education Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>