force-app/main/default/objects/Education_Details__c/fields/Academic_Review__c.field-meta.xml
<CustomField>
    <fullName>Academic_Review__c</fullName>
    <label>Academic Review</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>