force-app/main/default/objects/Education_Details__c/fields/Achievement__c.field-meta.xml
<CustomField>
    <fullName>Achievement__c</fullName>
    <label>Achievement</label>
    <length>254</length>
    <type>Text</type>
</CustomField>