force-app/main/default/objects/Education_Details__c/fields/Activity_Review__c.field-meta.xml
<CustomField>
    <fullName>Activity_Review__c</fullName>
    <label>Activity Review</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>