force-app/main/default/objects/Education_Details__c/fields/Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Activity_Type__c</fullName>
    <label>Activity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dance</fullName>
            </value>
            <value>
                <fullName>Drawing</fullName>
            </value>
            <value>
                <fullName>Singing</fullName>
            </value>
            <value>
                <fullName>Sports</fullName>
            </value>
            <value>
                <fullName>Drama</fullName>
            </value>
            <value>
                <fullName>Debate</fullName>
            </value>
            <value>
                <fullName>Volunteer Work</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>