force-app/main/default/objects/Education_Details__c/fields/Course_Name__c.field-meta.xml
<CustomField>
    <fullName>Course_Name__c</fullName>
    <label>Course Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Language and Literature</fullName>
            </value>
            <value>
                <fullName>Pure Science</fullName>
            </value>
            <value>
                <fullName>Social Science</fullName>
            </value>
            <value>
                <fullName>Commerce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>