force-app/main/default/objects/Education_Details__c/fields/Student_Name__c.field-meta.xml
<CustomField>
    <fullName>Student_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student Name</label>
    <referenceTo>Student__c</referenceTo>
    <relationshipLabel>Education Details</relationshipLabel>
    <relationshipName>Education_Details1</relationshipName>
    <type>Lookup</type>
</CustomField>