force-app/main/default/objects/Education_Details__c/fields/Year_of_Completion__c.field-meta.xml
<CustomField>
    <fullName>Year_of_Completion__c</fullName>
    <label>Year of Completion</label>
    <type>Date</type>
</CustomField>