force-app/main/default/objects/Education_Details__c/recordTypes/Academics.recordType-meta.xml
<RecordType>
    <fullName>Academics</fullName>
    <active>true</active>
    <label>Academics</label>
</RecordType>