force-app/main/default/objects/Education_Details__c/recordTypes/Extra_Curriculum.recordType-meta.xml
<RecordType>
    <fullName>Extra_Curriculum</fullName>
    <active>true</active>
    <label>Extra Curriculum</label>
</RecordType>