force-app/main/default/objects/Education_Details__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Student_Name__c</columns>
    <columns>Course_Name__c</columns>
    <columns>Academic_Review__c</columns>
    <columns>Grade__c</columns>
    <columns>Activity_Type__c</columns>
    <columns>Achievement__c</columns>
    <columns>Activity_Review__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>